<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_in"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        android:text="@string/sign_in"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Welcome back"
        android:textColor="@color/dark_grey"
        android:textStyle="italic"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_title"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Your email"
        android:inputType="text"
        android:padding="8dp"
        android:background="@drawable/rounded_editext"
        android:textColor="#000000"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableRight="@drawable/ic_eye"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:padding="8dp"
        android:background="@drawable/rounded_editext"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/email_login"
        app:layout_constraintStart_toStartOf="@+id/email_login"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/next_step_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="@color/primary"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/white"
        android:text="Next"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/forgot_pass_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:background="@color/white"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/newmember_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_member"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_login"
        app:layout_constraintVertical_bias="0.785" />

    <TextView
        android:id="@+id/signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_up"
        android:textSize="14sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/newmember_login"
        app:layout_constraintStart_toEndOf="@+id/newmember_login"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_login"
        app:layout_constraintVertical_bias="0.784" />


</androidx.constraintlayout.widget.ConstraintLayout>