<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_in"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        android:text="@string/sign_up"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Create account"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/dark_grey"
        app:layout_constraintStart_toStartOf="@+id/signup_title"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_person_2"
        android:drawablePadding="8dp"
        android:drawableTint="@color/primary"
        android:ems="10"
        android:hint="Username"
        android:padding="8dp"
        android:textColor="#000000"
        android:background="@drawable/rounded_editext"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

    <EditText
        android:id="@+id/phone_signup"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="8dp"
        android:drawableTint="@color/primary"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone"
        android:background="@drawable/rounded_editext"
        android:textColor="#000000"
        android:padding="8dp"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/username_signup"
        app:layout_constraintStart_toStartOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/username_signup" />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Email"
        android:background="@drawable/rounded_editext"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:padding="8dp"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/phone_signup"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="@+id/phone_signup"
        app:layout_constraintTop_toBottomOf="@+id/phone_signup" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_eye"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_editext"
        android:textColor="#000000"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/email_signup"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="@+id/email_signup"
        app:layout_constraintTop_toBottomOf="@+id/email_signup" />

    <Button
        android:id="@+id/nextstepsignup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/primary"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/white"
        android:text="Next"
        android:elevation="4dp"
        android:shadowColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/password_signup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agree" />

    <TextView
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/term_of_user"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/password_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_signup"
        app:layout_constraintTop_toBottomOf="@+id/password_signup" />

    <TextView
        android:id="@+id/newmember_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_member"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agree"
        app:layout_constraintVertical_bias="0.785" />

    <TextView
        android:id="@+id/signin_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/newmember_signup"
        app:layout_constraintStart_toEndOf="@+id/newmember_signup"
        app:layout_constraintTop_toBottomOf="@+id/agree"
        app:layout_constraintVertical_bias="0.784" />
</androidx.constraintlayout.widget.ConstraintLayout>